--- a/package.json
+++ b/package.json
@@ -21,7 +21,10 @@
     "sequelize": "^6.7.0"
   },
   "devDependencies": {
+    "eslint": "^8.20.0",
+    "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-trybe-backend": "^1.0.4",
+    "eslint-plugin-import": "^2.26.0",
     "jest": "^27.3.1",
     "nodemon": "^2.0.14",
     "sequelize-cli": "^6.4.1",
