--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,7 +2,7 @@ on: [push, pull_request]
 
 jobs:
   eslint:
-    runs-on: ubuntu:latest
+    runs-on: ubuntu-latest
     steps:
       - name: Verifica o repositório do Git
         uses: actions/checkout@v2
@@ -14,3 +14,16 @@ jobs:
         run: npm install
       - name: executa o lint
         run: npx eslint .
+  jest:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Verifica o repositório do Git
+        uses: actions/checkout@v2
+      - name: Instala node versão 14
+        uses: actions/setup-node@v1
+        with:
+          node-version: 14
+      - name: Istala dependências
+        run: npm install
+      - name: Roda os testes
+        run: npm test
