--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-trybe-backend": "^1.0.4",
     "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-sonarjs": "^0.14.0",
     "jest": "^27.3.1",
     "nodemon": "^2.0.14",
     "sequelize-cli": "^6.4.1",
