--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,15 +5,11 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Verifica o repositório do Git
-        uses: actions/checkout@v2
-      - name: Instala node versão 14
-        uses: actions/setup-node@v1
-        with:
-          node-version: 16
+        uses: actions/checkout@v1
       - name: Istala dependências
         run: npm install
       - name: executa o lint
-        run: npx eslint .
+        run: npm run lint
   jest:
     runs-on: ubuntu-latest
     steps:
